# Group-Mediated-FJ

./: CMakeLists.txt  README.md
apps/: precompute_cache.cpp  run_experiments.cpp
build_o3/: CMakeCache.txt  Makefile  cmake_install.cmake  precompute_cache  run_experiments
data/dblp/power/: group_graph.txt  sg.txt
include/fj/baseline/: clique_expansion.hpp  direct_solver.hpp
include/fj/common/: random.hpp  timer.hpp  types.hpp
include/fj/experiment/: experiment_config.hpp  experiment_instance.hpp  experiment_result.hpp  experiment_runner.hpp  method.hpp  methods.hpp  residuals.hpp
include/fj/generator/: group_graph_generator.hpp  ug_generator.hpp  ws_generator.hpp
include/fj/graph/: bipartite_csr.hpp  csr_graph.hpp
include/fj/io/: binary_csr_io.hpp  csv_writer.hpp  edge_list_reader.hpp  precond_io.hpp  vector_reader.hpp
result/: dblp.csv  dblp_full.csv  out.csv
src/baseline/: clique_expansion.cpp  direct_solver.cpp
src/common/: random.cpp
src/experiment/: experiment_runner.cpp  method.cpp  method_clique.cpp  method_direct.cpp  method_fj_dynamics.cpp  method_full_system.cpp  method_schur.cpp  residuals.cpp
src/generator/: group_graph_generator.cpp  ug_generator.cpp  ws_generator.cpp
src/graph/: bipartite_csr.cpp  csr_graph.cpp
src/io/: binary_csr_io.cpp  csv_writer.cpp  edge_list_reader.cpp  precond_io.cpp  vector_reader.cpp
src/metrics/: metrics.cpp
src/model/: fj_problem.cpp
src/operators/: agg_operator.cpp  auu_operator.cpp  full_system_operator.cpp  schur_operator.cpp
src/preconditioner/: jacobi_preconditioner.cpp  precond_builder.cpp
src/solver/: cg_solver.cpp  inner_solver.cpp
(+14 files in other folders)
